Refactor profile resolver (#36)
* Updated use of metaschema-java.

* Revamped profile resolver fixing some structural defects in the way it was resolving references.
Relocated some classes and packages.
Added builders for most catalog related objects.
Cleanup of compile warnings and some PMD issues.